# AEQCS

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
aeqcs/: __init__.py
aeqcs/config/: cep_rules.yaml  data_sources.yaml  factor_registry.yaml  settings.yaml
aeqcs/core/: __init__.py  clock.py  config.py  event_bus.py  events.py  exceptions.py  json.py  mcp_server.py  service.py  versioning.py
aeqcs/data/: __init__.py  models.py  qlib_adapter.py  rate_limiter.py
aeqcs/factor/: __init__.py  evaluator.py  genetic_miner.py  pipeline.py  qlib_expression_handler.py  registry.py  risk_model.py
aeqcs/gate/: __init__.py  promote.py  proposals.py  validator.py
aeqcs/ingest/: __init__.py  document_parser.py  extractor.py  inbox_watcher.py
aeqcs/interaction/: __init__.py
aeqcs/knowledge/: __init__.py  semantic_network.py  universe_builder.py
aeqcs/llm/: __init__.py
aeqcs/memory/: __init__.py
aeqcs/runtime/: batch.py  intraday.py  minute_backfill.py  risk_alerts.py
deploy/: aeqcs.env.example  init_db.py  install_linux.sh  postgresql.conf  tune_os.sh  vacuum_maintenance.sql
docs/: AEQCS_ARCHITECTURE_V2.md  INTERFACE_SETUP.md  LINUX_INSTALL.md  OPERATIONS_RUNBOOK.md  POSTGRES_INTEGRATION_TESTS.md  PRODUCTION_ACCEPTANCE.md  PROGRESS.md
scripts/: import_tushare_local.py  load_sample_data.py  restore_rehearsal_health.py  run_smoke_backtest.py  verify_core_offline.py  verify_mcp_backtest_recovery.py  verify_mcp_concurrency.py  verify_mcp_http_sse.py  verify_mcp_permissions.py  verify_risk_alert_delivery.py  verify_table_bloat.py
(+92 files in other folders)
